<resources>
    <string name="app_name">Dotify</string>
    <string name="artist">Seven Lions featuring Tove Lo, Myron, Shane 54</string>
    <string name="defaultUsername">first_avenger</string>
    <string name="change_user">CHANGE USER</string>
    <string name="title">Strangers</string>
    <string name="cover_description">Song Cover Art</string>
    <string name="previous_btn_description">Previous Song</string>
    <string name="play_btn_description">Play Song</string>
    <string name="next_btn_description">Next Song</string>
    <string name="toast_next">Skipping to next track</string>
    <string name="toast_previous">Skipping to previous track</string>
    <string name="square_ratio">1:1</string>
    <string name="default_mini_player_text">No Song Playing</string>
    <string name="mini_player_text">%s - %s</string>
    <string name="num_plays_text">%d plays</string>
    <string name="statistics_play_count_text">%s has been played %d times</string>
    <string name="toast_delete_song">%s by %s was deleted</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Settings</string>
    <string name="new_song_channel">New Uploaded Music</string>
    <string name="new_song_channel_description">Get notifications about new song releases by your favorite artists!</string>
    <string name="new_song_notification_title">%s just released a new song!</string>
    <string name="new_song_notification_text">Listen to %s now on Dotify</string>
</resources>