<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultUsername"
            android:textColor="@color/black"
            android:textSize="@dimen/username_text"/>
        <EditText
            android:id="@+id/etNewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultUsername"
            android:textColor="@color/black"
            android:textSize="@dimen/username_text"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCoverArt"
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/strangers_cover_art"
        android:contentDescription="@string/cover_description" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/title_text"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textColor="@color/black"
        android:textSize="@dimen/artist_text"
        android:maxLines="1"
        android:ellipsize="end" />
    <TextView
        android:id="@+id/tvNumPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/artist_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingRight="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding">
        <ImageButton
            android:id="@+id/ibPrevious"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:src="@drawable/ic_previous"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/previous_btn_description" />
        <ImageButton
            android:id="@+id/ibPlay"
            android:layout_width="@dimen/play_btn_width"
            android:layout_height="@dimen/play_btn_height"
            android:src="@drawable/ic_play"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/play_btn_description" />
        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/next_btn_description"
            android:src="@drawable/ic_next" />
    </LinearLayout>

</LinearLayout>