<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultUsername"
        android:textColor="@color/black"
        android:textSize="@dimen/username_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"/>
    <EditText
        android:id="@+id/etNewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/username_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnChangeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_background_coor"
        android:textColor="@color/black"
        android:text="@string/change_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/ivCoverArt"
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/strangers_cover_art"
        android:contentDescription="@string/cover_description"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeUser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/title_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivCoverArt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textColor="@color/black"
        android:textSize="@dimen/artist_text"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvNumPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/artist_text"
        app:layout_constraintTop_toBottomOf="@+id/tvArtist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/ibPrevious"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:src="@drawable/ic_previous"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        android:contentDescription="@string/previous_btn_description"
        app:layout_constraintTop_toTopOf="@+id/ibPlay"
        app:layout_constraintBottom_toBottomOf="@id/ibPlay"
        app:layout_constraintRight_toLeftOf="@+id/ibPlay"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ImageButton
        android:id="@+id/ibPlay"
        android:layout_width="@dimen/play_btn_width"
        android:layout_height="@dimen/play_btn_height"
        android:src="@drawable/ic_play"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        android:contentDescription="@string/play_btn_description"
        app:layout_constraintTop_toBottomOf="@+id/tvNumPlays"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        android:contentDescription="@string/next_btn_description"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@id/ibPlay"
        app:layout_constraintLeft_toRightOf="@+id/ibPlay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>